@@ -1,3 +1,8 @@
+2008-12-16  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* docs/faq/general.xml:
+	Update the faq.
+
 2008-12-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* docs/gst/gstreamer-sections.txt:
